add some more starting state stuff, pretty print the debug

--- a/lib/dice_town_web/templates/page/index.html.eex
+++ b/lib/dice_town_web/templates/page/index.html.eex
@@ -1,6 +1,8 @@
 <div>
   <h4>Game State</h4>
   <p>
-    <%= inspect @game_state %>
+    <pre>
+      <%= inspect @game_state, pretty: true, limit: 30000 %>
+    </pre>
   </p>
 </div>
